fix collapse height fadin

--- a/src/docs/assets/styles/main.scss
+++ b/src/docs/assets/styles/main.scss
@@ -794,8 +794,7 @@ pre {
   // settings
   .site-breadcrumbs {
     // animations
-    &.scroll-on-top,
-    &.scroll-on-bottom {
+    &.scroll {
       z-index: 71 !important;
       .site-breadcrumbs-meta,
       .show-scroll {
